kompose/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - env:
        - name: CACHE_URL
          value: redis://redis
        - name: DATABASE_URL
          value: postgres://app_user:changeme@db/app_db
        - name: DJANGO_SECRET_KEY
          value: changeme
        - name: ELASTICSEARCH_ENDPOINT
          value: elasticsearch
        image: paindumonde-django-app:tag
        name: app
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
status: {}
