kompose/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: app_db
        - name: POSTGRES_PASSWORD
          value: changeme
        - name: POSTGRES_USER
          value: app_user
        image: postgres:9.6
        name: db
        resources: {}
      restartPolicy: Always
status: {}
